# context-pilot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  SECURITY.md  clippy_compared_list.md  deploy_local.sh  deploy_pi.sh  devis-attali-context-pilot.md  dummy-spec.md  dummy_test.rs  excepts.md  heartbeat  increment.txt  instructions_nestor_v1.md  issues.md  nightly.json  nightly.json.minisig  openapi.json  optimizations.md  run.sh  rust-toolchain.toml  rust_lints_compared_list.md  stable.json  stable.json.minisig  tedx.md  test_stderr  tintin-local.crt  todo.md  tool_test_file.md
crates/cp-base/: Cargo.toml
crates/cp-base/src/: cache.rs  cast.rs  classify.rs  config.rs  flame.rs  lib.rs  modules.rs  panels.rs  tools.rs  ui.rs
crates/cp-base/src/cast/: float_math.rs  mod.rs
crates/cp-base/src/config/: accessors.rs  behavioral.rs  constants.rs  global.rs  llm_types.rs  mod.rs  models.rs  yaml_sync.rs
crates/cp-base/src/state/: actions.rs  autocomplete.rs  config.rs  context.rs  flags.rs  message.rs  mod.rs  model_helpers.rs  runtime.rs  sidebar.rs  watchers.rs
crates/cp-base/src/tools/: api_schema.rs  async_exec.rs  mod.rs  param_type.rs  pre_flight.rs
crates/cp-base/src/types/: mod.rs  spine.rs
crates/cp-base/src/ui/: mod.rs  question_form.rs  render_cache.rs
crates/cp-console-server/: Cargo.toml
crates/cp-console-server/src/: main.rs  protocol.rs
crates/cp-egui/: Cargo.toml
crates/cp-egui/src/: app.rs  demo.rs  input.rs  layout.rs  lib.rs  main.rs  renderers.rs  theme.rs
crates/cp-mod-bridge/: Cargo.toml
crates/cp-mod-bridge/src/: body.rs  boot.rs  command.rs  error.rs  heartbeat.rs  identity.rs  lib.rs  registry_io.rs  tee.rs
crates/cp-mod-bridge/src/boot/: activate.rs  lock.rs  mod.rs
crates/cp-mod-bridge/src/register/: identity.rs  mod.rs  registry.rs
crates/cp-mod-bridge/tests/: boot_heartbeat.rs  state.rs  tee_intake_body.rs
crates/cp-mod-browser/: Cargo.toml
crates/cp-mod-browser/src/: client.rs  lib.rs  lifecycle.rs  panel.rs  snapshot.rs  tools.rs  types.rs
crates/cp-mod-callback/: Cargo.toml
crates/cp-mod-callback/src/: firing.rs  lib.rs  panel.rs  storage.rs  tools.rs  tools_upsert.rs  trigger.rs  types.rs
crates/cp-mod-callback/src/upsert/: create.rs  mod.rs
crates/cp-mod-chat/: Cargo.toml
crates/cp-mod-chat/src/: bootstrap.rs  bridges.rs  client.rs  lib.rs  server.rs  sync.rs  types.rs
crates/cp-mod-chat/src/bridges/: lifecycle.rs  login.rs  mod.rs
crates/cp-mod-chat/src/client/: account.rs  mod.rs  rooms.rs  send.rs  sync.rs
crates/cp-mod-chat/src/panels/: dashboard.rs  room.rs
crates/cp-mod-chat/src/tools/: helpers.rs  mod.rs  secondary.rs
crates/cp-mod-console/: Cargo.toml
crates/cp-mod-console/src/: lib.rs  manager.rs  panel.rs  pollers.rs  ring_buffer.rs  tools.rs  types.rs
crates/cp-mod-console/src/server/: main.rs  protocol.rs
crates/cp-mod-entities/: Cargo.toml
crates/cp-mod-entities/src/: db.rs  errors.rs  format.rs  lib.rs  migrations.rs  panel.rs  sync.rs  tools.rs  types.rs
crates/cp-mod-entities/src/panels/: format.rs  mod.rs  panel.rs  result_panel.rs
crates/cp-mod-entities/src/tools/: exec.rs  mod.rs
crates/cp-mod-git/: Cargo.toml
crates/cp-mod-git/src/: cache_invalidation.rs  classify.rs  lib.rs  panel.rs  result_panel.rs  tools.rs  types.rs
crates/cp-mod-github/: Cargo.toml
crates/cp-mod-github/src/: cache_invalidation.rs  classify.rs  lib.rs  panel.rs  parse.rs  tools.rs  types.rs  watcher.rs
crates/cp-mod-github/src/classify/: mod.rs  tests.rs
crates/cp-mod-logs/: Cargo.toml
crates/cp-mod-logs/src/: lib.rs  panel.rs  tools.rs  types.rs
crates/cp-mod-ocr/: Cargo.toml
crates/cp-mod-ocr/src/: client.rs  lib.rs  tools.rs
crates/cp-mod-search/: Cargo.toml
crates/cp-mod-search/src/: client.rs  indexer.rs  lib.rs  ocr.rs  panel.rs  radar.rs  server.rs  tools.rs  types.rs
crates/cp-mod-search/src/index/: backup.rs  boot.rs  filters.rs  indexer.rs  logsync.rs  mod.rs  reconcile.rs  tick.rs
crates/cp-mod-search/src/meili/: api.rs  bootstrap.rs  client.rs  download.rs  mod.rs  overlay.rs  server.rs  tasks.rs  watchdog.rs
crates/cp-mod-search/src/radar/: mod.rs  yaml.rs
crates/cp-mod-search/src/splitter/: fixed_size.rs  tree_sitter.rs
crates/cp-mod-tree/: Cargo.toml
crates/cp-mod-tree/src/: lib.rs  panel.rs  render.rs  storage.rs  tools.rs  types.rs
crates/cp-mod-utilities/: Cargo.toml
crates/cp-mod-utilities/src/: dirs.rs  hash.rs  lib.rs  secret.rs  time.rs
crates/cp-oplog/: Cargo.toml
crates/cp-oplog/src/: append.rs  compact.rs  error.rs  lib.rs  replay.rs  segment.rs  service.rs  service_tests.rs
crates/cp-oplog/tests/: crash_replay.rs  dedup_compaction.rs  oplog_core.rs  service_group_commit.rs
crates/cp-orchestrator/: Cargo.toml
crates/cp-orchestrator/src/: channel.rs  inspect.rs  lib.rs  liveness.rs  main.rs  registry.rs  runtime.rs
crates/cp-orchestrator/src/registry/: channel.rs  liveness.rs  mod.rs  tailer.rs  tee_reader.rs
crates/cp-orchestrator/src/runtime/: driver.rs  mod.rs  seed.rs  update_scheduler.rs
crates/cp-orchestrator/src/services/: agent_meta.rs  avatars.rs  claude_oauth.rs  cost_breaker.rs  materialized_view.rs  materialized_view_tests.rs  mod.rs  names.rs  retire.rs  stream_hub.rs
crates/cp-orchestrator/src/supervisor/: mod.rs  proc.rs  tests.rs
crates/cp-orchestrator/src/transport/: files.rs  finder.rs  meta.rs  mod.rs  panels.rs  query.rs  rest.rs  sse.rs  stream.rs  ticket.rs
crates/cp-orchestrator/tests/: end_to_end.rs  fleet_soak.rs  openapi.rs  registry_channel.rs  services_integration.rs  supervisor_lifecycle.rs  transport_http.rs
crates/cp-orchestrator/tests/common/: mod.rs
crates/cp-vault/: Cargo.toml
crates/cp-vault/src/: bridge.rs  dotenv.rs  lib.rs  local.rs  oauth.rs  registry.rs  types.rs
crates/cp-web-server/: Cargo.toml
crates/cp-web-server/src/: auth.rs  lib.rs  projects.rs  protocol.rs  server.rs  system.rs
crates/cp-wire/: Cargo.toml
crates/cp-wire/src/: framing.rs  heartbeat.rs  lib.rs
crates/cp-wire/tests/: framing_integrity.rs  protocol.rs
(+1339 files in other folders)
